# App

./: .replit  app.py  config.py  pyproject.toml  replit.md  streamlit_app.py  template_admin.py
.general/: KEYWORD.txt  apikey.txt  config.txt  requirements.txt  simple_seo_generator.py
keywords/: my-blog-repo.txt  tech-blog.txt
template/Blog/: .jekyll-metadata  _config.yml  ads.txt  categories.html  pyproject.toml  robots.txt  simple_serve.rb
template/Blog/_data/: navigation.yml
template/Blog/_includes/: adsense-in-article.html  advertisement.html  footer.html  head.html  header.html  popup-ads.html  post-card.html  related-posts-old.html  search.html  social-share.html
template/Blog/_layouts/: default.html  home.html  post.html
template/Blog/_pages/: advertise.md  disclaimer.md
template/Blog/_posts/: 2025-07-15-business-strategy-guide.md  2025-07-15-digital-marketing-trends.md
template/Blog/_sass/: _base.scss  _layout.scss  _optimizations.scss  _post-card.scss  _sidebar.scss  _variables.scss  main.scss
template/Blog/_sass/components/: _home.scss
template/Blog/_site/: 404.html  config.txt  feed.xml  index.html  robots.txt  search.json  sitemap.xml
template/Blog/_site/2025-07-15-business-strategy-guide/: index.html
template/Blog/_site/2025-07-15-digital-marketing-trends/: index.html
template/Blog/_site/about/: index.html
template/Blog/_site/advertise/: index.html
template/Blog/_site/categories/: index.html
template/Blog/_site/contact/: index.html
template/Blog/_site/disclaimer/: index.html
template/Blog/_site/portfolio/: index.html
(+9 files in other folders)
